--- a/gribouille/src/main/resources/uit/gon/gribouille/CadreGribouille.fxml
+++ b/gribouille/src/main/resources/uit/gon/gribouille/CadreGribouille.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.ColorPicker?>
@@ -21,170 +22,174 @@
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Rectangle?>
-<BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <MenuBar prefHeight="25.0" prefWidth="484.0" BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="Dessin">
-            <items>
-                  <MenuItem mnemonicParsing="false" text="Charger" />
-                  <MenuItem mnemonicParsing="false" text="Sauvegarder" />
-              <MenuItem mnemonicParsing="false" text="Exporter" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Quitter" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Outils">
-            <items>
-                  <Menu mnemonicParsing="false" text="Epaisseur">
-                     <items>
-                        <RadioMenuItem mnemonicParsing="false" text="1">
-                           <toggleGroup>
-                              <ToggleGroup fx:id="epaisseur" />
-                           </toggleGroup>
-                        </RadioMenuItem>
-                        <RadioMenuItem mnemonicParsing="false" text="2" toggleGroup="$epaisseur" />
-                        <RadioMenuItem mnemonicParsing="false" text="3" toggleGroup="$epaisseur" />
-                        <RadioMenuItem mnemonicParsing="false" text="4" toggleGroup="$epaisseur" />
-                        <RadioMenuItem mnemonicParsing="false" text="5" toggleGroup="$epaisseur" />
-                        <RadioMenuItem mnemonicParsing="false" text="6" toggleGroup="$epaisseur" />
-                        <RadioMenuItem mnemonicParsing="false" text="7" toggleGroup="$epaisseur" />
-                        <RadioMenuItem mnemonicParsing="false" text="8" />
-                        <RadioMenuItem mnemonicParsing="false" text="9" toggleGroup="$epaisseur" />
-                     </items>
-                  </Menu>
-                  <RadioMenuItem mnemonicParsing="false" text="Crayon">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="forme" />
-                     </toggleGroup>
-                  </RadioMenuItem>
-                  <RadioMenuItem mnemonicParsing="false" text="Etoile" toggleGroup="$forme" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Aide">
-            <items>
-              <MenuItem mnemonicParsing="false" text="A propos" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
-   <bottom>
-      <GridPane alignment="CENTER" prefHeight="20.0" prefWidth="668.0" BorderPane.alignment="BOTTOM_CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="40.0" prefWidth="15.0" text="x : " />
-                  <Label alignment="BOTTOM_CENTER" prefHeight="36.0" prefWidth="28.0" text="Label" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
-               <children>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="40.0" prefWidth="15.0" text="y : " />
-                  <Label alignment="BOTTOM_CENTER" prefHeight="36.0" prefWidth="28.0" text="Label" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
-               <children>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="29.0" prefWidth="59.0" text="Epaisseur : " />
-                  <Label alignment="BOTTOM_CENTER" prefHeight="38.0" prefWidth="28.0" text="Label" />
-               </children>
-            </HBox>
-            <Label alignment="BOTTOM_CENTER" prefHeight="32.0" prefWidth="26.0" text="Outil" GridPane.columnIndex="3">
-               <GridPane.margin>
-                  <Insets left="50.0" />
-               </GridPane.margin></Label>
-            <Label alignment="BOTTOM_CENTER" prefHeight="44.0" prefWidth="42.0" text="Couleur" GridPane.columnIndex="4">
-               <GridPane.margin>
-                  <Insets left="50.0" />
-               </GridPane.margin></Label>
-         </children>
-      </GridPane>
-   </bottom>
-   <right>
-      <VBox prefHeight="672.0" prefWidth="118.0" style="-fx-background-color: lightgray;" BorderPane.alignment="CENTER">
-         <children>
-            <ColorPicker prefWidth="118.0" />
-            <TilePane prefHeight="256.0" prefWidth="118.0">
-               <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff1f1f" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
-                     <TilePane.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </TilePane.margin>
-                  </Rectangle>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fff3f" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
-                     <TilePane.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </TilePane.margin>
-                  </Rectangle>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
-                     <fill>
-                        <LinearGradient endX="1.0" endY="1.0">
-                           <stops>
-                              <Stop>
-                                 <color>
-                                    <Color red="0.5324074029922485" green="0.9376543164253235" blue="1.0" />
-                                 </color>
-                              </Stop>
-                              <Stop offset="1.0">
-                                 <color>
-                                    <Color red="0.6011817455291748" green="0.8898066878318787" blue="0.9342105388641357" />
-                                 </color>
-                              </Stop>
-                           </stops>
-                        </LinearGradient>
-                     </fill>
-                     <TilePane.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </TilePane.margin>
-                  </Rectangle>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff1ffe" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
-                     <TilePane.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </TilePane.margin>
-                  </Rectangle>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e3ff1f" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
-                     <TilePane.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </TilePane.margin>
-                  </Rectangle>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
-                     <TilePane.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </TilePane.margin>
-                  </Rectangle>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
-                     <TilePane.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </TilePane.margin>
-                  </Rectangle>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4400ff" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
-                     <TilePane.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </TilePane.margin>
-                  </Rectangle>
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </TilePane>
-         </children>
-      </VBox>
-   </right>
-   <center>
-      <Pane prefHeight="750.0" prefWidth="668.0" BorderPane.alignment="CENTER">
-         <children>
-            <Canvas height="711.0" width="374.0" />
-         </children></Pane>
-   </center>
+
+<BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uit.gon.gribouille.GribouilleController">
+	<top>
+		<MenuBar prefHeight="25.0" prefWidth="484.0" BorderPane.alignment="CENTER">
+			<menus>
+				<Menu mnemonicParsing="false" text="Dessin">
+					<items>
+						<MenuItem mnemonicParsing="false" text="Charger" />
+						<MenuItem mnemonicParsing="false" text="Sauvegarder" />
+						<MenuItem mnemonicParsing="false" text="Exporter" />
+						<SeparatorMenuItem mnemonicParsing="false" />
+						<MenuItem mnemonicParsing="false" text="Quitter" />
+					</items>
+				</Menu>
+				<Menu mnemonicParsing="false" text="Outils">
+					<items>
+						<Menu mnemonicParsing="false" text="Epaisseur">
+							<items>
+								<RadioMenuItem mnemonicParsing="false" text="1">
+									<toggleGroup>
+										<ToggleGroup fx:id="epaisseur" />
+									</toggleGroup>
+								</RadioMenuItem>
+								<RadioMenuItem mnemonicParsing="false" text="2" toggleGroup="$epaisseur" />
+								<RadioMenuItem mnemonicParsing="false" text="3" toggleGroup="$epaisseur" />
+								<RadioMenuItem mnemonicParsing="false" text="4" toggleGroup="$epaisseur" />
+								<RadioMenuItem mnemonicParsing="false" text="5" toggleGroup="$epaisseur" />
+								<RadioMenuItem mnemonicParsing="false" text="6" toggleGroup="$epaisseur" />
+								<RadioMenuItem mnemonicParsing="false" text="7" toggleGroup="$epaisseur" />
+								<RadioMenuItem mnemonicParsing="false" text="8" />
+								<RadioMenuItem mnemonicParsing="false" text="9" toggleGroup="$epaisseur" />
+							</items>
+						</Menu>
+						<RadioMenuItem mnemonicParsing="false" text="Crayon">
+							<toggleGroup>
+								<ToggleGroup fx:id="forme" />
+							</toggleGroup>
+						</RadioMenuItem>
+						<RadioMenuItem mnemonicParsing="false" text="Etoile" toggleGroup="$forme" />
+					</items>
+				</Menu>
+				<Menu mnemonicParsing="false" text="Aide">
+					<items>
+						<MenuItem mnemonicParsing="false" text="A propos" />
+					</items>
+				</Menu>
+			</menus>
+		</MenuBar>
+	</top>
+	<bottom>
+		<GridPane alignment="CENTER" prefHeight="20.0" prefWidth="668.0" BorderPane.alignment="BOTTOM_CENTER">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+			</rowConstraints>
+			<children>
+				<HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+					<children>
+						<Label fx:id="labels" alignment="BOTTOM_CENTER" prefHeight="40.0" prefWidth="15.0" text="x : " />
+						<Label fx:id="labelX" alignment="BOTTOM_CENTER" prefHeight="20.0" prefWidth="51.0" />
+					</children>
+				</HBox>
+				<HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+					<children>
+						<Label fx:id="labels" alignment="BOTTOM_CENTER" prefHeight="40.0" prefWidth="15.0" text="y : " />
+						<Label fx:id="labelY" alignment="BOTTOM_CENTER" prefHeight="20.0" prefWidth="57.0" />
+					</children>
+				</HBox>
+				<HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
+					<children>
+						<Label fx:id="labels" alignment="BOTTOM_CENTER" prefHeight="29.0" prefWidth="59.0" text="Epaisseur : " />
+						<Label fx:id="labels" alignment="BOTTOM_CENTER" prefHeight="38.0" prefWidth="28.0" text="Label" />
+					</children>
+				</HBox>
+				<Label fx:id="labels" alignment="BOTTOM_CENTER" prefHeight="32.0" prefWidth="26.0" text="Outil" GridPane.columnIndex="3">
+					<GridPane.margin>
+						<Insets left="50.0" />
+					</GridPane.margin>
+				</Label>
+				<Label fx:id="labels" alignment="BOTTOM_CENTER" prefHeight="44.0" prefWidth="42.0" text="Couleur" GridPane.columnIndex="4">
+					<GridPane.margin>
+						<Insets left="50.0" />
+					</GridPane.margin>
+				</Label>
+			</children>
+		</GridPane>
+	</bottom>
+	<right>
+		<VBox prefHeight="672.0" prefWidth="118.0" style="-fx-background-color: lightgray;" BorderPane.alignment="CENTER">
+			<children>
+				<ColorPicker fx:id="colorPicker" prefWidth="118.0" />
+				<TilePane prefHeight="256.0" prefWidth="118.0">
+					<children>
+						<Rectangle fx:id="rectangles" arcHeight="5.0" arcWidth="5.0" fill="#ff1f1f" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
+							<TilePane.margin>
+								<Insets left="5.0" top="5.0" />
+							</TilePane.margin>
+						</Rectangle>
+						<Rectangle fx:id="rectangles" arcHeight="5.0" arcWidth="5.0" fill="#1fff3f" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
+							<TilePane.margin>
+								<Insets left="5.0" top="5.0" />
+							</TilePane.margin>
+						</Rectangle>
+						<Rectangle fx:id="rectangles" arcHeight="5.0" arcWidth="5.0" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
+							<fill>
+								<LinearGradient endX="1.0" endY="1.0">
+									<stops>
+										<Stop>
+											<color>
+												<Color red="0.5324074029922485" green="0.9376543164253235" blue="1.0" />
+											</color>
+										</Stop>
+										<Stop offset="1.0">
+											<color>
+												<Color red="0.6011817455291748" green="0.8898066878318787" blue="0.9342105388641357" />
+											</color>
+										</Stop>
+									</stops>
+								</LinearGradient>
+							</fill>
+							<TilePane.margin>
+								<Insets left="5.0" top="5.0" />
+							</TilePane.margin>
+						</Rectangle>
+						<Rectangle fx:id="rectangles" arcHeight="5.0" arcWidth="5.0" fill="#ff1ffe" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
+							<TilePane.margin>
+								<Insets left="5.0" top="5.0" />
+							</TilePane.margin>
+						</Rectangle>
+						<Rectangle fx:id="rectangles" arcHeight="5.0" arcWidth="5.0" fill="#e3ff1f" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
+							<TilePane.margin>
+								<Insets left="5.0" top="5.0" />
+							</TilePane.margin>
+						</Rectangle>
+						<Rectangle fx:id="rectangles" arcHeight="5.0" arcWidth="5.0" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
+							<TilePane.margin>
+								<Insets left="5.0" top="5.0" />
+							</TilePane.margin>
+						</Rectangle>
+						<Rectangle fx:id="rectangles" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
+							<TilePane.margin>
+								<Insets left="5.0" top="5.0" />
+							</TilePane.margin>
+						</Rectangle>
+						<Rectangle fx:id="rectangles" arcHeight="5.0" arcWidth="5.0" fill="#4400ff" height="50.0" stroke="BLACK" strokeType="INSIDE" width="50.0">
+							<TilePane.margin>
+								<Insets left="5.0" top="5.0" />
+							</TilePane.margin>
+						</Rectangle>
+					</children>
+					<VBox.margin>
+						<Insets />
+					</VBox.margin>
+				</TilePane>
+			</children>
+		</VBox>
+	</right>
+	<center>
+		<Pane fx:id="pane" prefHeight="750.0" prefWidth="668.0" BorderPane.alignment="CENTER">
+			<children>
+				<Canvas fx:id="canvas" onMouseMoved="#onMouseMoved" onMouseDragged="#onMouseDragged" onMousePressed="#onMousePressed" />
+			</children>
+		</Pane>
+	</center>
 </BorderPane>
