--- a/gribouille/src/main/resources/uit/gon/gribouille/statut.fxml
+++ b/gribouille/src/main/resources/uit/gon/gribouille/statut.fxml
@@ -1,29 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.RadioMenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.TilePane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Rectangle?>
 
-<GridPane  xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" prefHeight="20.0" prefWidth="668.0" BorderPane.alignment="BOTTOM_CENTER" fx:controller="uit.gon.gribouille.controleurs.StatutControleur">
+<GridPane alignment="CENTER" prefHeight="20.0" prefWidth="668.0" BorderPane.alignment="BOTTOM_CENTER" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uit.gon.gribouille.controleurs.StatutControleur">
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -53,7 +38,7 @@
 						<Label fx:id="labelEpaisseur" alignment="BOTTOM_CENTER" prefHeight="38.0" prefWidth="28.0" />
 					</children>
 				</HBox>
-				<Label fx:id="labels" alignment="BOTTOM_CENTER" prefHeight="32.0" prefWidth="26.0" text="Outil" GridPane.columnIndex="3">
+				<Label fx:id="labelOutil" alignment="BOTTOM_CENTER" contentDisplay="CENTER" prefHeight="20.0" prefWidth="87.0" text="" GridPane.columnIndex="3">
 					<GridPane.margin>
 						<Insets left="50.0" />
 					</GridPane.margin>
