ajout handler correct + bouton quitter

--- a/tp5/src/main/resources/fr/unicaen/iut/tp5/demineur.fxml
+++ b/tp5/src/main/resources/fr/unicaen/iut/tp5/demineur.fxml
@@ -21,7 +21,7 @@
               <menus>
                 <Menu mnemonicParsing="false" text="Jeu">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Quitter" />
+                    <MenuItem mnemonicParsing="false" text="Quitter" onAction="#onQuitter"/>
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Diffculté">
