--- a/gribouille/src/main/resources/uit/gon/gribouille/menus.fxml
+++ b/gribouille/src/main/resources/uit/gon/gribouille/menus.fxml
@@ -13,7 +13,7 @@
 		<Menu mnemonicParsing="false" text="Dessin">
 			<items>
 				<MenuItem mnemonicParsing="false" text="Charger" />
-				<MenuItem mnemonicParsing="false" text="Sauvegarder" />
+				<MenuItem mnemonicParsing="false" onAction="#onSauver" text="Sauvegarder" />
 				<MenuItem mnemonicParsing="false" text="Exporter" />
 				<SeparatorMenuItem mnemonicParsing="false" />
 				<MenuItem mnemonicParsing="false" onAction="#onQuitte" text="Quitter" />
