--- a/gribouille/src/main/resources/uit/gon/gribouille/menus.fxml
+++ b/gribouille/src/main/resources/uit/gon/gribouille/menus.fxml
@@ -54,7 +54,7 @@
 		</Menu>
 		<Menu mnemonicParsing="false" text="Aide">
 			<items>
-				<MenuItem mnemonicParsing="false" text="A propos" />
+				<MenuItem mnemonicParsing="false" onAction="#onAPropos" text="A propos" />
 			</items>
 		</Menu>
 	</menus>
