--- a/gribouille/src/main/resources/uit/gon/gribouille/statut.fxml
+++ b/gribouille/src/main/resources/uit/gon/gribouille/statut.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="CENTER" prefHeight="20.0" prefWidth="668.0" BorderPane.alignment="BOTTOM_CENTER" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uit.gon.gribouille.controleurs.StatutControleur">
+<GridPane alignment="CENTER" prefHeight="20.0" prefWidth="668.0" BorderPane.alignment="BOTTOM_CENTER" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uit.gon.gribouille.controleurs.StatutControleur">
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -43,7 +43,7 @@
 						<Insets left="50.0" />
 					</GridPane.margin>
 				</Label>
-				<Label fx:id="labelCouleur" alignment="BOTTOM_CENTER" prefHeight="44.0" prefWidth="42.0" GridPane.columnIndex="4">
+				<Label fx:id="labelCouleur" alignment="CENTER" contentDisplay="CENTER" prefHeight="20.0" prefWidth="61.0" GridPane.columnIndex="4">
 					<GridPane.margin>
 						<Insets left="50.0" />
 					</GridPane.margin>
